--- a/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
+++ b/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
@@ -33,7 +33,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -83,7 +83,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-05-21T11:00:09.605Z" user="admin">21/05/2023 11:00:09</note>
+                                <note type="lastUpdated" date-time="2023-06-20T16:21:26.335Z" user="admin">20/06/2023 16:21:26</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:38:10.747Z" user="line-tofte">Auto
@@ -136,6 +136,7 @@
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-05-06T21:50:10.615Z" user="andre">Glossary revised - activated in CG</note>
                             <note type="updated" update="translation-status" value="1" date-time="2023-05-21T11:00:05.047Z" user="sameer">1</note>
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-05-21T11:00:05.047Z" user="sameer">Included in App v 3.2</note>
+                            <note type="updated" update="text-version" value="1.0.4" date-time="2023-06-20T16:21:23.452Z" user="celso">Activate crosslinks to Toh 9</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -218,8 +219,8 @@
                                                           <title xml:lang="en">Perfection of Wisdom in Eighteen Thousand Lines</title>,
                                                   Toh 10 (2022). Chapters 22 and 25 are even
                                                   explicitly named for Kauśika (under the name
-                                                  Śatakratu). In <foreign xml:lang="en">The Perfection of Wisdom in
-                                                          Twenty-Five Thousand Lines</foreign>,<ref rend="pending" target="https://read.84000.co/translation/toh9.html"/> see chapters 14 et seq. and chapter 25. </note>
+                                                  Śatakratu). In Padmakara Translation Group, trans., <foreign xml:lang="en">The Perfection of Wisdom in
+                                                    Twenty-Five Thousand Lines</foreign>, see <ref target="https://read.84000.co/translation/toh9.html#UT22084-026-001-chapter-14">chapters 14</ref> et seq. and <ref target="https://read.84000.co/translation/toh9.html#UT22084-026-001-chapter-25">chapter 25</ref>. </note>
                                                 and <title xml:lang="en">The Perfection of Wisdom
                                                   “Kauśika”</title> presents a short summary of some
                                                 of the elements found in those larger sūtras.
@@ -840,6 +841,10 @@
                                                   Dictionary of Buddhism</ref>
                         </title>. Accessed
                                                 July 14, 2022.</bibl>
+                                        <bibl xml:id="UT22084-034-007-223">Padmakara Translation Group, trans. <title xml:lang="en">
+                                                  <ref target="https://read.84000.co/translation/toh9.html">The Perfection of Wisdom in Twenty-five Thousand Lines</ref>
+                                                  </title> (<title xml:lang="Sa-Ltn">Pañca­viṃśati­sāhasrikā­prajñā­pāramitā</title>, Toh 9). 
+                                                  84000: Translating the Words of the Buddha, 2023.</bibl>
                                         <bibl xml:id="UT22084-034-007-90">Sparham, Gareth, trans.
                                                   <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh10.html?part=UT22084-029-001-chapter-32">The Perfection of Wisdom in Eighteen Thousand
@@ -1298,8 +1303,8 @@
                                         <item>
                         <gloss xml:id="UT22084-034-007-204" type="term" mode="match">
                             <term>god</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">lha</term>
-                            <term xml:lang="bo" type="sourceAttested">ལྷ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" status="verified">lha</term>
+                            <term xml:lang="bo" type="attestedSource">ལྷ།</term>
                             <term xml:lang="zh" type="sourceUnspecified">天</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">deva</term>
                         </gloss>
@@ -1307,8 +1312,8 @@
                                         <item>
                         <gloss xml:id="UT22084-034-007-205" type="term" mode="match">
                             <term>bodhisattva</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">byang chub sems dpa’</term>
-                            <term xml:lang="bo" type="sourceAttested">བྱང་ཆུབ་སེམས་དཔའ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" status="verified">byang chub sems dpa’</term>
+                            <term xml:lang="bo" type="attestedSource">བྱང་ཆུབ་སེམས་དཔའ།</term>
                             <term xml:lang="zh" type="sourceUnspecified">菩薩摩訶薩</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bodhisattva</term>
                             <term type="definition">A class of heroic beings who aspire to attain awakening for the sake of all beings. </term>
@@ -1317,8 +1322,8 @@
                                         <item>
                         <gloss xml:id="UT22084-034-007-206" type="term" mode="match">
                             <term>gandharva</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">dri za</term>
-                            <term xml:lang="bo" type="sourceAttested">དྲི་ཟ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" status="verified">dri za</term>
+                            <term xml:lang="bo" type="attestedSource">དྲི་ཟ།</term>
                             <term xml:lang="zh" type="sourceUnspecified">乾闥婆</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">gandharva</term>
                         </gloss>
@@ -1326,8 +1331,8 @@
                                         <item>
                         <gloss xml:id="UT22084-034-007-207" type="term" mode="match">
                             <term>blessed one</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">bcom ldan ’das</term>
-                            <term xml:lang="bo" type="sourceAttested">བཅོམ་ལྡན་འདས།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" status="verified">bcom ldan ’das</term>
+                            <term xml:lang="bo" type="attestedSource">བཅོམ་ལྡན་འདས།</term>
                             <term xml:lang="zh" type="sourceUnspecified">世尊</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bhagavat</term>
                             <term type="alternative">blessed</term>
@@ -1361,8 +1366,8 @@
                                         <item>
                         <gloss xml:id="UT22084-034-007-212" type="person" mode="match">
                             <term>Kauśika</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">kau shi ka</term>
-                            <term xml:lang="bo" type="sourceAttested">ཀཽ་ཤི་ཀ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" status="verified">kau shi ka</term>
+                            <term xml:lang="bo" type="attestedSource">ཀཽ་ཤི་ཀ</term>
                             <term xml:lang="zh" type="sourceUnspecified">憍尸迦</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">kauśika</term>
                             <term type="definition">An epithet of the god Śakra. The name means “one who belongs to the Kuśika lineage.” In the Ṛgveda, Śakra is addressed by the epithet Kauśika, with the implication that he is associated with the descendants of the Kuśika lineage.</term>
@@ -1417,8 +1422,8 @@
                                         <item>
                         <gloss xml:id="UT22084-034-007-218" type="place" mode="match">
                             <term>Mount Sumeru</term>
-                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">ri rab</term>
-                            <term xml:lang="bo" type="sourceAttested">རི་རབ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" status="verified">ri rab</term>
+                            <term xml:lang="bo" type="attestedSource">རི་རབ།</term>
                             <term xml:lang="zh" type="sourceUnspecified">須彌山</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">sumeru</term>
                             <term type="definition">The axis mundi of Buddhist cosmology, the mountain located at the center of a universe and surrounded by four continents.</term>
