--- a/translations/kangyur/translations/034-009_toh21,531-the_heart_of_the_perfection_of_wisdom_the_blessed_mother.xml
+++ b/translations/kangyur/translations/034-009_toh21,531-the_heart_of_the_perfection_of_wisdom_the_blessed_mother.xml
@@ -28,7 +28,7 @@
         <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.9 <date>2022</date>
+                <edition>v 1.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -80,7 +80,7 @@
 
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-01-24T19:38:48.493Z" user="admin">24/01/2023 19:38:48</note>
+        <note type="lastUpdated" date-time="2023-06-20T16:41:03.064Z" user="admin">20/06/2023 16:41:03</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-05-04T08:26:35.216Z" user="line-tofte">3</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-04T08:26:35.216Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-04T08:27:00.524Z" user="line-tofte">Auto (update-contributors)</note>
@@ -127,6 +127,7 @@
           <note type="updated" update="text-version" value="1.0.7" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
           <note type="updated" update="text-version" value="1.0.8" date-time="2023-01-20T17:08:47.744Z" user="martina-cotter">Updated typo.</note>
           <note type="updated" update="text-version" value="1.0.9" date-time="2023-01-24T19:38:45.655Z" user="martina-cotter">Added pending links.</note>
+          <note type="updated" update="text-version" value="1.0.10" date-time="2023-06-20T16:41:00.202Z" user="celso">Activate crosslinks to Toh 9</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -658,8 +659,9 @@
               articulating the relationship between emptiness and the phenomena of the five
               aggregates echoes sets of passages in all three of the long Prajñāpāramitā sūtras. In
               two passages in <title xml:lang="en">The Perfection of Wisdom in Eighteen Thousand
-                Lines</title> (Toh 10, <ref target="https://read.84000.co/translation/toh10.html#UT22084-029-001-396">3.23</ref><!--vol. 29, F.29.b–F.30.a--> and <ref target="https://read.84000.co/translation/toh10.html#UT22084-029-001-808">8.14</ref><!--F.78.b–F.79.a-->), two in <title xml:lang="en">The Perfection of
-                Wisdom in Twenty-Five Thousand Lines</title> (Toh 9, vol. 26, <ref target="https://read.84000.co/translation/toh9.html" rend="pending">F.50.a–F.51.a</ref> and <ref target="https://read.84000.co/translation/toh9.html" rend="pending">F.151.a–F.151.b</ref>), and three in <title xml:lang="en">The
+                Lines</title> (Toh 10, <ptr target="#UT22084-029-001-396"/><!--vol. 29, F.29.b–F.30.a--> and <ptr target="#UT22084-029-001-808"/><!--F.78.b–F.79.a-->), two in 
+              <title xml:lang="en">The Perfection of
+                Wisdom in Twenty-Five Thousand Lines</title> (Toh 9, <ptr target="#UT22084-026-001-467"/>–<ptr target="#UT22084-026-001-471"/><!--vol. 26, F.50.a–F.51.a--> and <ptr target="#UT22084-026-001-1060"/><!--F.151.a–F.151.b-->), and three in <title xml:lang="en">The
                 Perfection of Wisdom in One Hundred Thousand Lines</title> (Toh 8, vol. 14, <ref target="https://read.84000.co/translation/toh8-1.html" rend="pending">F.73.b–F.75.b</ref>, <ref target="https://read.84000.co/translation/toh8-1.html" rend="pending">F.86.b–F.87.b</ref>, and <ref target="https://read.84000.co/translation/toh8-1.html" rend="pending">F.367.a–373.a</ref>) there are similarly statements to the effect that emptiness is
               not other than form, that form itself is emptiness, and emptiness itself is form.
               Those passages go on to characterize the relationship between emptiness and the other
@@ -691,12 +693,9 @@
               cognition.”</note> no attainment, and no nonattainment.<note place="end" xml:id="UT22084-034-009-87"> This series of negations echoes the more extensive series
               found in passages in <title xml:lang="en">The
                   Perfection of Wisdom in Eighteen Thousand Lines</title> (Toh 10,
-                <ref target="https://read.84000.co/translation/toh10.html#UT22084-029-001-396">3.23</ref><!--F.29.b–F.30.a-->), in <title xml:lang="en">
-                                <ref target="https://read.84000.co/translation/toh9.html" rend="pending">The
-                  Perfection of Wisdom in Twenty-Five Thousand Lines</ref>
-                            </title> (Toh 9, vol. 26,
-              F.50.b)<!--&lt;Reference Toh 0009 vol. 26
-              F.50.b&gt;-->, and in <title xml:lang="en">
+                <ptr target="#UT22084-029-001-396"/>–<ptr target="#UT22084-029-001-402"/><!--F.29.b–F.30.a-->), in <title xml:lang="en">The
+                  Perfection of Wisdom in Twenty-Five Thousand Lines</title> (Toh 9, <ptr target="#UT22084-026-001-467"/>–<ptr target="#UT22084-026-001-471"/><!--vol. 26,
+              F.50.b-->), and in <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh8-1.html" rend="pending">The Perfection
                   of Wisdom in One Hundred Thousand Lines</ref>
                             </title> (Toh 8, vol. 14,
@@ -880,6 +879,11 @@
           <bibl xml:id="UT22084-034-009-136">Nattier, Jan. “The Heart Sūtra: A Chinese Apocryphal
             Text?” <title xml:lang="en">Journal of the International Association of Buddhist
               Studies</title> 15, no. 2 (1992): 153–223.</bibl>
+          <bibl xml:id="UT22084-034-009-162">Padmakara Translation Group, trans. <title xml:lang="en">
+            <ref target="https://read.84000.co/translation/toh9.html">The Perfection of Wisdom in Twenty-five
+              Thousand Lines</ref>
+          </title> (<title xml:lang="Sa-Ltn">Pañca­viṃśati­sāhasrikā­prajñā­pāramitā</title>, Toh 9). 84000: Translating the Words of
+            the Buddha, 2023.</bibl>
           <bibl xml:id="UT22084-034-009-137">Silk, Jonathan. <title xml:lang="en">The Heart Sutra in
               Tibetan: A Critical Edition of the Two Recensions Contained in the Kanjur</title>.
             Wiener Studien zur Tibetologie und Buddhismuskunde, vol. 34. Vienna: Arbeitskreis fur
