--- a/translations/kangyur/translations/089-002_toh545,892-spoken_by_manjusri_himself.xml
+++ b/translations/kangyur/translations/089-002_toh545,892-spoken_by_manjusri_himself.xml
@@ -26,7 +26,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.5 <date>2023</date>
+                <edition>v 1.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -72,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-06-19T16:20:41.299Z" user="admin">19/06/2023 16:20:41</note>
+                                <note type="lastUpdated" date-time="2023-06-21T13:56:08.435Z" user="admin">21/06/2023 13:56:08</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:16:19.114Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:16:58.484Z" user="line-tofte">Auto
@@ -129,6 +129,7 @@
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-04-17T08:02:17.066Z" user="sameer">Included in App v 3.1</note>
                             <note type="updated" update="text-version" value="1.0.4" date-time="2023-04-26T23:15:31.526Z" user="martina-cotter">updated summary and note 15.</note>
                             <note type="updated" update="text-version" value="1.0.5" date-time="2023-06-19T16:20:38.464Z" user="john">Added one note (17).</note>
+                            <note type="updated" update="text-version" value="1.0.6" date-time="2023-06-21T13:56:05.606Z" user="john">Dhāraṇī edited.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -201,15 +202,18 @@
                         <ref key="toh892" cRef="F.166.b" type="folio" xml:id="UT22084-089-002-78"/> Homage to the Three Jewels! Homage
                                                 to noble Mañjuśrī!</p>
                                         <lb/>
-                                        <p rend="mantra" tid="22">namo ratna­trayāya namo bhagavate dharma­dhātunigarjita­rājāya tathāgatāya arhate
-                                                samyak­sambuddhāya <ref key="toh545" cRef="F.13.b" type="folio" xml:id="UT22084-089-002-75"/> namo
-                                                mañjuśrīye kumārabhūtāya ||<note place="end" xml:id="UT22084-089-002-17"> English translation: “Homage
+                                        <p rend="mantra" tid="22">
+                        <mantra xml:lang="Sa-Ltn">namo ratna­trayāya | namo bhagavate dharma­dhātunigarjita­rājāya tathāgatāya arhate
+                                                samyak­sambuddhāya | <ref key="toh545" cRef="F.13.b" type="folio" xml:id="UT22084-089-002-75"/> namo
+                                                mañjuśrīye kumārabhūtāya ||</mantra>
+                        <note place="end" xml:id="UT22084-089-002-17"> English translation: “Homage
                                                         to the Three Jewels, homage to the Blessed One, to the king who has resounded the dharmadhātu,
                                                         to the tathāgata, arhat, perfectly and completely awakened one, homage to ever youthful
                                                         Mañjuśrī.”</note>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-089-002-18"/>
-                                        <p rend="mantra" tid="23">tadyathā | oṁ jñānāloke tri­ratna­vaṃśa­saṃdhāraṇi<note place="end" xml:id="UT22084-089-002-19"> Toh 892 reads <foreign xml:lang="Sa-Ltn" type="quote">tri­ratna­paṃśa­saṃdhāraṇi</foreign>.</note> bhagavati abhayaṃ<note place="end" xml:id="UT22084-089-002-20"> The Degé Kangyur in both versions (Toh 545 and 892) reads
+                                        <p rend="mantra" tid="23">
+                        <mantra xml:lang="Sa-Ltn">tadyathā | oṁ jñānāloke tri­ratna­vaṃśa­saṃdhāraṇi<note place="end" xml:id="UT22084-089-002-19"> Toh 892 reads <foreign xml:lang="Sa-Ltn" type="quote">tri­ratna­paṃśa­saṃdhāraṇi</foreign>.</note> bhagavati abhayaṃ<note place="end" xml:id="UT22084-089-002-20"> The Degé Kangyur in both versions (Toh 545 and 892) reads
                                                                 <foreign xml:lang="Sa-Ltn" type="quote">abāyaṃ</foreign>.</note> dādi abhayaṃ<note place="end" xml:id="UT22084-089-002-21"> The Degé Kangyur in both versions (Toh 545 and 892)
                                                         reads <foreign xml:lang="Sa-Ltn" type="quote">abāyaṃ</foreign>.</note> datte me
                                                 bodhicitta­vajra­paripālaya samantāva­bhāsena hana hana sarva­sattva­saṃtānapatitaṃ<note place="end" xml:id="UT22084-089-002-22"> The Degé Kangyur in both versions (Toh 545 and 892) reads
@@ -226,12 +230,13 @@
                                                 buddhān ādeśaya<note place="end" xml:id="UT22084-089-002-27"> The Degé Kangyur in both versions (Toh
                                                         545 and 892) reads <foreign xml:lang="Sa-Ltn" type="quote">adeśāya</foreign>.</note>
                                                         deva­nāga­yakṣa­gandharvāsura­garuḍa­kinnara­mahoragān<note place="end" xml:id="UT22084-089-002-28"> The Degé Kangyur in both versions (Toh 545 and 892) reads <term type="ignore">
-                                <foreign xml:lang="Sa-Ltn" type="quote">mahoraga</foreign>
-                            </term>
-                        </note>
+                                    <foreign xml:lang="Sa-Ltn" type="quote">mahoraga</foreign>
+                                </term>
+                            </note>
                                                 vaśe sthāpaya<note place="end" xml:id="UT22084-089-002-29"> The Degé Kangyur in both versions (Toh 545
                                                         and 892) reads <foreign xml:lang="Sa-Ltn" type="quote">stapāya</foreign>.</note> abhayaṃ<note place="end" xml:id="UT22084-089-002-30"> The Degé Kangyur in both versions (Toh 545 and 892)
-                                                                reads <foreign xml:lang="Sa-Ltn" type="quote">apayaṃ</foreign>.</note> dadati svāhā ||<note place="end" xml:id="UT22084-089-002-31"> “It is: <foreign xml:lang="Sa-Ltn">Tad yathā oṁ</foreign>,
+                                                                reads <foreign xml:lang="Sa-Ltn" type="quote">apayaṃ</foreign>.</note> dadati svāhā ||</mantra>
+                        <note place="end" xml:id="UT22084-089-002-31"> “It is: <foreign xml:lang="Sa-Ltn">Tad yathā | oṁ</foreign>,
                                                         light of wisdom sustaining the lineage of the Three Jewels, Blessed Lady, grant freedom from
                                                         fear! You who grant freedom from fear, protect the vajra of my mind of awakening! Vanquish,
                                                         vanquish with your all-encompassing light the evil in the continuum of each being and sever
