--- a/translations/kangyur/translations/089-003_toh546,893-the_incantation_the_curse_of_manjusri.xml
+++ b/translations/kangyur/translations/089-003_toh546,893-the_incantation_the_curse_of_manjusri.xml
@@ -23,7 +23,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -65,7 +65,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-04-17T08:04:19.632Z" user="admin">17/04/2023 08:04:19</note>
+                                <note type="lastUpdated" date-time="2023-06-21T14:06:14.134Z" user="admin">21/06/2023 14:06:14</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:27:42.342Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:27:42.342Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:28:05.921Z" user="line-tofte">Auto
@@ -112,6 +112,7 @@
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-04-14T12:05:16.795Z" user="laura">Some suggestions from TCTGNY and cleaned up markup/copy</note>
                             <note type="updated" update="translation-status" value="1" date-time="2023-04-17T08:04:15.304Z" user="sameer">1</note>
                             <note type="updated" update="text-version" value="1.0.2" date-time="2023-04-17T08:04:15.304Z" user="sameer">Included in App v 3.1</note>
+                            <note type="updated" update="text-version" value="1.0.3" date-time="2023-06-21T14:06:11.298Z" user="john">Edited dhāraṇī.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -252,16 +253,18 @@
                                                 mahāsattva Mañjuśrī bowed to all dharmas, the essence of all buddhas,<note place="end" xml:id="UT22084-089-003-26"> Or perhaps “the entire Dharma, which is in essence all the
                                                         buddhas.”</note> and spoke the vidyā:</p>
                                         <milestone unit="chunk" xml:id="UT22084-089-003-27"/>
-                                        <p rend="mantra" tid="27">namaḥ sarvatathāgatebhyo namo mañjuśriye bodhisattvāya || oṁ mañjuvara mañjughoṣa
-                                                hana hana paca paca mata mata matha matha vidhvaṃsaya vidhvaṃsaya kara kara truṭa truṭa bhañja bhañja
-                                                āviśa āviśa tuṭa tuṭa truṭa truṭa sphuṭa sphuṭa hṛdayabandhani namaḥ sambodhani praveśa praveśa lota
-                                                lota kṛta kṛta krida krida krīḍa krīḍa<note place="end" xml:id="UT22084-089-003-30"> Toh 846 reads
+                                        <p rend="mantra" tid="27">
+                        <mantra xml:lang="Sa-Ltn">namaḥ sarvatathāgatebhyo | namo mañjuśriye bodhisattvāya || oṁ mañjuvara mañjughoṣa
+                                                hana hana | paca paca | mata mata | matha matha | vidhvaṃsaya vidhvaṃsaya | kara kara | truṭa truṭa | bhañja bhañja |
+                                                āviśa āviśa | tuṭa tuṭa | truṭa truṭa | sphuṭa sphuṭa | hṛdayabandhani namaḥ sambodhani praveśa praveśa | lota
+                                                lota | kṛta kṛta | krida krida | krīḍa krīḍa<note place="end" xml:id="UT22084-089-003-30"> Toh 846 reads
                                                                 <mantra xml:lang="Sa-Ltn">kṛta kṛta krida krida krīṭa krīṭa</mantra>. Toh 893 reads
                                                                 <foreign xml:lang="Sa-Ltn" type="quote">krida krida kṛta kṛta</foreign>, exchanging
                                                         the order of these combinations and omitting <mantra xml:lang="Sa-Ltn">krīṭa
-                                                        krīṭa</mantra>.</note>
-                                                <ref key="toh893" cRef="F.167.b" type="folio" xml:id="UT22084-089-003-75"/> hasa hasa prabandha
-                                                prabandha āviśa āviśa hūṁ hūṁ hūṁ phaṭ phaṭ phaṭ svāhā ||<note place="end" xml:id="UT22084-089-003-31"> Provisional translation: “Homage to all the tathāgatas, homage to the bodhisattva Mañjuśrī!
+                                                                krīṭa</mantra>.</note> |
+                                                <ref key="toh893" cRef="F.167.b" type="folio" xml:id="UT22084-089-003-75"/> hasa hasa | prabandha
+                                                prabandha | āviśa āviśa | hūṁ hūṁ hūṁ | phaṭ phaṭ phaṭ svāhā ||</mantra>
+                        <note place="end" xml:id="UT22084-089-003-31"> Provisional translation: “Homage to all the tathāgatas, homage to the bodhisattva Mañjuśrī!
                                                                 <foreign xml:lang="Sa-Ltn">Oṁ</foreign>, Mañjuvara Mañjughoṣa, strike, strike, cook,
                                                         cook, <foreign xml:lang="Sa-Ltn">mata mata</foreign>, churn, churn, crush, crush, act, act,
                                                         split, split, break, break, possess, possess, <foreign xml:lang="Sa-Ltn">tuṭa tuṭa</foreign>,
