--- a/translations/kangyur/placeholders/100-022_toh865-the_incantation_of_the_buddha_vairocana.xml
+++ b/translations/kangyur/placeholders/100-022_toh865-the_incantation_of_the_buddha_vairocana.xml
@@ -10,12 +10,13 @@
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2022</date>
+                <edition>v 0.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-100-022"/>
                 <date/>
             </publicationStmt>
@@ -31,7 +32,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-19T13:11:31.361Z" user="admin">19/06/2023 13:11:31</note>
+                <note type="lastUpdated" date-time="2023-06-22T14:03:20.4Z" user="admin">22/06/2023 14:03:20</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:54:57.88Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:55:25.104Z" user="line-tofte">Auto (update-contributors)</note>
@@ -44,6 +45,9 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-04-17T10:16:00.353Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2023-06-19T13:11:27.07Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-06-19T13:11:27.07Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-06-19T13:11:57.797Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-06-22T14:03:16.118Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-06-22T14:03:16.118Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
