--- a/translations/kangyur/placeholders/100-047_toh891-the_incantation_of_sarvanivaranaviskambhin.xml
+++ b/translations/kangyur/placeholders/100-047_toh891-the_incantation_of_sarvanivaranaviskambhin.xml
@@ -12,12 +12,13 @@
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2022</date>
+                <edition>v 0.0.10 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-100-047"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-19T13:12:43.521Z" user="admin">19/06/2023 13:12:43</note>
+                <note type="lastUpdated" date-time="2023-06-22T14:04:19.4Z" user="admin">22/06/2023 14:04:19</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:55:53.951Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:55:53.951Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:56:18.881Z" user="line-tofte">Auto (update-contributors)</note>
@@ -47,6 +48,9 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-17T08:57:41.284Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2023-06-19T13:12:39.233Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-06-19T13:12:39.233Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-06-19T13:13:09.403Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-06-22T14:04:15.11Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-06-22T14:04:15.11Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
